force-app/main/default/objects/leaseworks__Delinquency_History__c/leaseworks__Delinquency_History__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_OP Delinquency History</label>
    <nameField>
        <label>Delinquency History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_OP Delinquency History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>