force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__MR_Ratio_Previous_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Ratio_Previous_Period__c</fullName>
    <formula>/*Y_Hidden_MR_Ratio_Previous_Period__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP MR Ratio (Previous Period)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>