force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Prev_Rent_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Prev_Rent_Balance__c</fullName>
    <label>Z_Unused_OP Rent (Previous Period)</label>
    <summarizedField>leaseworks__Aircraft_Delinquency__c.leaseworks__Prev_Rent_Balance__c</summarizedField>
    <summaryForeignKey>leaseworks__Aircraft_Delinquency__c.leaseworks__Delinquency_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>