force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Total_Other_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Other_Invoice_Amount__c</fullName>
    <formula>/*Y_Hidden_Total_Other_Invoice_Amount__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current total value of Other Invoices unpaid, and overdue</inlineHelpText>
    <label>Z_Unused_OP Total Outs Other Inv Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>