force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Total_Outstnding__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Outstnding__c</fullName>
    <description>Current Total value of invoices outstanding</description>
    <formula>/*Total_MR_Invoice_Amount__c + Total_Rental_Invoice_Amount__c + Y_Hidden_Total_Other_Invoice_Amount__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Total value of invoices outstanding</inlineHelpText>
    <label>Z_Unused_OP Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>