force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Total_Previous_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Previous_Period__c</fullName>
    <formula>/*Prev_Rent_Balance__c  +  Prev_MR_Balance__c*/null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_OP Total (Previous Period)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>