force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Total_Rental_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Rental_Invoice_Amount__c</fullName>
    <inlineHelpText>Current total value of Rent Invoices unpaid, and overdue</inlineHelpText>
    <label>Z_Unused_OP {Total Out Rental Inv Amnt}</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>