force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Y_Hidden_Key__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Key__c</fullName>
    <description>for internal use</description>
    <label>Z_Unused_OP{Key}</label>
    <length>255</length>
    <type>Text</type>
</CustomField>