force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Y_Hidden_MSN_List__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_MSN_List__c</fullName>
    <label>Z_Unused_OP {MSN List}</label>
    <length>255</length>
    <type>Text</type>
</CustomField>