force-app/main/default/objects/leaseworks__Delinquency_History__c/fields/leaseworks__Y_Hidden_Rent_Ratio_Current_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Rent_Ratio_Current_Period__c</fullName>
    <label>Z_Unused_OP {Rent Ratio (Cur Period)}</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>